--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,31 +1,27 @@
-name: CD
+name: ci
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
+      # TODO: Version Bump
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./docker/DockerFile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/news-app:latest
+          file:
+            ./docker/Dockerfile
+            # TODO: Auto Deployment after successful build
