--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "eslint.options": {
     "configFile": "eslint.config.mjs"
   },
-  "cSpell.words": ["maxage", "varmakarthik"]
+  "cSpell.words": ["configmap", "maxage", "varmakarthik"]
 }
