--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "jest",
     "terraform:init": "cd ./terraform && terraform init -reconfigure",
     "terraform:plan": "cd ./terraform && terraform plan",
